--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ a:link,a:visited{color:red;text-decoration:none}
 a:hover,a:active{color:blue;text-decoration:none}
 </style>
 </HEAD><BODY>
-<table cellspacing=0 cellpadding=0 width=760 border=0 align=center><tr><td><img src=images/bannera.jpg border=0></td></tr></table>
+<table cellspacing=0 cellpadding=0 width=760 border=0 align=center><tr><td><img src=bannera.jpg border=0></td></tr></table>
 <table cellspacing=0 cellpadding=0 width=760 border=0 align=center bgcolor=#80FFFF height=48><tr>
 <td width=100 align=center bgcolor=#ff3400><font color=yellow>首页</font></td>
 <td width=100 align=center><a href=down.html>GeoTIFF</a></td>
