--- a/down.html
+++ b/down.html
@@ -10,7 +10,7 @@ a:hover,a:active{color:blue;text-decoration:none}
 </HEAD><BODY>
 <table cellspacing=0 cellpadding=0 width=760 border=0 align=center><tr><td><img src=images/bannera.jpg border=0></td></tr></table>
 <table cellspacing=0 cellpadding=0 width=760 border=0 align=center bgcolor=#80FFFF height=48><tr>
-<td width=100 align=center><a href=default.html>首页</a></td>
+<td width=100 align=center><a href=index.html>首页</a></td>
 <td width=100 align=center bgcolor=#ff3400><font color=yellow>GeoTIFF</font></td>
 <td width=100 align=center><a href=mbtiles.html>今日花园Maps</a></td>
 <td width=100 align=center><a href=oruxmaps.html>OruxMaps</a></td>
