--- a/Resources.html
+++ b/Resources.html
@@ -55,7 +55,6 @@ OruxMaps全国3-10层离线卫星地图：<a href=http://pan.baidu.com/s/1xIV0B 
 
 <table cellspacing=0 cellpadding=0 width=760 border=0 align=center>
 <tr><td bgcolor=#ff3400 align=center><font color=yellow>www.todaygarden.net</font></td></tr>
-<tr><td align=center style="font-size:12px;color:#0053A6"><br>版权所有 2010-2020 今日花园<br>
-<br><br></td></tr>
+<tr><td align=center style="font-size:12px;color:#0053A6"><br>版权所有 2010-2020 今日花园<br><br><br></td></tr>
 </table>
 </body></html>
