--- a/soft.html
+++ b/soft.html
@@ -48,7 +48,7 @@ a:hover,a:active{color:blue;text-decoration:none}
 软件大小：1.4MB<br>
 应用平台：Win7/XP/Vista/2000/2003<br>
 授权形式：免费软件<br>
-在线帮助：<a href=oruxwin/ target=_blank>OruxWin在线帮助</a><br>
+在线帮助：<a href=oruxwin/index.html target=_blank>OruxWin在线帮助</a><br>
 下载地址：
 &nbsp;&nbsp;<a href=http://pan.baidu.com/s/1kUwDYFt target=_blank>百度网盘</a><br><br>
 </td></tr></table>
