--- a/oruxwin/index.html
+++ b/oruxwin/index.html
@@ -15,8 +15,7 @@ p{font-size:16px;color:#008000;letter-spacing:1px;line-height:20px;text-indent:3
 <p>目前最新版本是7.4版。</p>
 <p class=t>【相关下载】</p>
 <p>最新7.4版安装程序(OruxWinSetup7.4.rar)下载地址：</p>
-<p><a href=http://www.todaygarden.net/program/OruxWinSetup7.4.rar target=_blank>本地下载</a>
-&nbsp;&nbsp;<a href=http://pan.baidu.com/s/1kUwDYFt target=_blank>百度网盘</a></p>
+<p>&nbsp;&nbsp;<a href=http://pan.baidu.com/s/1kUwDYFt target=_blank>百度网盘</a></p>
 <p>OruxMaps世界4-8层卫星地图：<a href=http://pan.baidu.com/s/1jGkmWho target=_blank>世界4-8层卫星地图(450M)</a></p> 
 <p>OruxMaps全国3-10层离线卫星地图：<a href=http://pan.baidu.com/s/1xIV0B target=_blank>全国3-10层离线卫星地图(1.01G)</a></p> 
 <p class=t>【软件简介】</p>
