--- a/oruxmaps.html
+++ b/oruxmaps.html
@@ -49,7 +49,7 @@ OruxMaps离线卫星地图的使用：<br><br>
 安卓系统OruxMaps下载地址：<a href=http://www.todaygarden.net/program/com.orux.oruxmaps_6.5.9_60509.rar target=_blank>oruxmaps(6.5.9版本)压缩包</a><br><br>
 Oruxmaps 导航软件使用说明书：<a href=http://pan.baidu.com/s/1dDeRTYx target=_blank>Oruxmaps4.4版导航软件使用说明书.rar</a><br>
 <font color='#0080C0'>说明：</font>是V4.4版的使用说明书，现在软件更新后界面都有许多的变化，但基本功能都是相同的，此说明书仅供参考。<br><br>
-OruxWin软件的最新信息请看：<a href=http://www.todaygarden.net/oruxwin/readme.html target=_blank>OruxWin在线帮助</a>
+OruxWin软件的最新信息请看：<a href=oruxwin/index.html target=_blank>OruxWin在线帮助</a>
 <br><br>
 本站免费提供OruxMaps世界4-8层和全国3-10层离线卫星地图给大家试用，下载地址：<br>
 <a href=http://pan.baidu.com/s/1kT4Ere3 target=_blank>世界4-8层卫星地图(450M)</a><br>
