--- a/our.html
+++ b/our.html
@@ -1,8 +1,8 @@
-<HTML><HEAD><TITLE>½ñÈÕ»¨Ô° - ÁªÏµÎÒÃÇ</TITLE>
+<HTML><HEAD><TITLE>ä»Šæ—¥èŠ±å›­ - è”ç³»æˆ‘ä»¬</TITLE>
 <META http-equiv=Content-Type content="text/html; charset=gb2312">
-<META name=Author content="ºØÇìÉú" />
-<META name=KeyWords content="ÎÀĞÇµØÍ¼,ÎÀĞÇÓ°Ïñ,GPSµ¼º½ÒÇ,½ñÈÕ»¨Ô°,Maps,MBTiles,OZI,OziExplorer,OruxMaps,OruxWin,WINCE,Android,TIF,GeoTIFF,ÀëÏßµØÍ¼,Êı¾İ°ü,µØÍ¼ÖÆ×÷½Ì³Ì" />
-<META name=Description content="½ñÈÕ»¨Ô°MapsÆ»¹ûIOSÏµÍ³MBTiles¸ñÊ½ÀëÏßÎÀĞÇµØÍ¼¡¢OruxMapsÀëÏßÎÀĞÇµØÍ¼¡¢OziExplorer¹È¸èÎÀĞÇµØÍ¼£¬Ìá¹©GeoTIFF´ø×ø±êĞÅÏ¢µÄÎÀĞÇµØÍ¼Ó°ÏñÏÂÔØ¡¢ÄÜÔÚWindowsÏµÍ³ÏÂÔËĞĞµÄOruxMapsÈí¼şOruxWin¡£" />
+<META name=Author content="è´ºåº†ç”Ÿ" />
+<META name=KeyWords content="å«æ˜Ÿåœ°å›¾,å«æ˜Ÿå½±åƒ,GPSå¯¼èˆªä»ª,ä»Šæ—¥èŠ±å›­,Maps,MBTiles,OZI,OziExplorer,OruxMaps,OruxWin,WINCE,Android,TIF,GeoTIFF,ç¦»çº¿åœ°å›¾,æ•°æ®åŒ…,åœ°å›¾åˆ¶ä½œæ•™ç¨‹" />
+<META name=Description content="ä»Šæ—¥èŠ±å›­Mapsè‹¹æœIOSç³»ç»ŸMBTilesæ ¼å¼ç¦»çº¿å«æ˜Ÿåœ°å›¾ã€OruxMapsç¦»çº¿å«æ˜Ÿåœ°å›¾ã€OziExplorerè°·æ­Œå«æ˜Ÿåœ°å›¾ï¼Œæä¾›GeoTIFFå¸¦åæ ‡ä¿¡æ¯çš„å«æ˜Ÿåœ°å›¾å½±åƒä¸‹è½½ã€èƒ½åœ¨Windowsç³»ç»Ÿä¸‹è¿è¡Œçš„OruxMapsè½¯ä»¶OruxWinã€‚" />
 <style type="text/css">
 a:link,a:visited{color:red;text-decoration:none}
 a:hover,a:active{color:blue;text-decoration:none}
@@ -10,24 +10,24 @@ a:hover,a:active{color:blue;text-decoration:none}
 </HEAD><BODY>
 <table cellspacing=0 cellpadding=0 width=760 border=0 align=center><tr><td><img src=images/bannera.jpg border=0></td></tr></table>
 <table cellspacing=0 cellpadding=0 width=760 border=0 align=center bgcolor=#80FFFF height=48><tr>
-<td width=100 align=center><a href=default.html>Ê×Ò³</a></td>
+<td width=100 align=center><a href=index.html>é¦–é¡µ</a></td>
 <td width=100 align=center><a href=down.html>GeoTIFF</a></td>
-<td width=100 align=center><a href=mbtiles.html>½ñÈÕ»¨Ô°Maps</a></td>
+<td width=100 align=center><a href=mbtiles.html>ä»Šæ—¥èŠ±å›­Maps</a></td>
 <td width=100 align=center><a href=oruxmaps.html>OruxMaps</a></td>
 <td width=100 align=center><a href=ozi.html>OZI</a></td>
-<td width=100 align=center><a href=Resources.html>×ÊÔ´</a></td>
-<td width=100 align=center><a href=soft.html>Èí¼ş</a></td>
-<td width=100 align=center bgcolor=#ff3400><font color=yellow>ÁªÏµ</font></td>
+<td width=100 align=center><a href=Resources.html>èµ„æº</a></td>
+<td width=100 align=center><a href=soft.html>è½¯ä»¶</a></td>
+<td width=100 align=center bgcolor=#ff3400><font color=yellow>è”ç³»</font></td>
 </tr></table>
 <table cellspacing=0 cellpadding=0 width=760 border=0 align=center bgcolor=#ff3400 height=32>
-<tr><td>&nbsp;&nbsp;<font color=yellow>µ±Ç°Î»ÖÃ£ºÁªÏµ</font>
+<tr><td>&nbsp;&nbsp;<font color=yellow>å½“å‰ä½ç½®ï¼šè”ç³»</font>
 </td></tr></table>
 
 <table cellspacing=0 cellpadding=0 width=760 border=0 align=center><tr><td>
 
 <!--
 <p align=center><font color=red size=6><br>
-ÍøÕ¾ĞİÏ¢
+ç½‘ç«™ä¼‘æ¯
 </font></p>
 
 -->
@@ -35,13 +35,13 @@ a:hover,a:active{color:blue;text-decoration:none}
 
 <br><br>
 <table cellspacing=0 cellpadding=10 width=340 align=center>
-<tr><td valign=top align=right>ÔÚÏßÊ±¼ä</td><td><font color=green>ĞÇÆÚÒ»ÖÁĞÇÆÚÎå</font> <font color=red>8:30-21:30<br>
-<font color=green>ĞÇÆÚÁù¡¢ĞÇÆÚÌì</font> <font color=red>19:00-21:30</font></td></tr>
-<tr><td align=right>ÌÔ±¦Íøµê</td><td><a href=http://todaygarden.taobao.com target=_blank />½ñÈÕ»¨Ô°</a></td></tr>
-<tr><td align=right>ÌÔ±¦ÍúÍú</td><td><a target="_blank" href="http://www.taobao.com/webww/ww.php?ver=3&touid=hqse&siteid=cntaobao&status=1&charset=utf-8"><img border="0" src="http://amos.alicdn.com/online.aw?v=2&uid=hqse&site=cntaobao&s=1&charset=utf-8" alt="ÌÔ±¦ÍúÍú" /></a></td></tr>
-<tr><td align=right>ÌÚÑ¶ Q Q</td><td><a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=87859979&site=qq&menu=yes"><img border="0" src="http://wpa.qq.com/pa?p=2:87859979:41" alt="ÌÚÑ¶ Q Q"></a></td></tr>
-<tr><td align=right>µç×ÓÓÊÏä</td><td>hqse@qq.com</td></tr>
-<tr><td align=right>Î¢ĞÅ¶şÎ¬Âë</td><td>&nbsp;&nbsp;</td></tr>
+<tr><td valign=top align=right>åœ¨çº¿æ—¶é—´</td><td><font color=green>æ˜ŸæœŸä¸€è‡³æ˜ŸæœŸäº”</font> <font color=red>8:30-21:30<br>
+<font color=green>æ˜ŸæœŸå…­ã€æ˜ŸæœŸå¤©</font> <font color=red>19:00-21:30</font></td></tr>
+<tr><td align=right>æ·˜å®ç½‘åº—</td><td><a href=http://todaygarden.taobao.com target=_blank />ä»Šæ—¥èŠ±å›­</a></td></tr>
+<tr><td align=right>æ·˜å®æ—ºæ—º</td><td><a target="_blank" href="http://www.taobao.com/webww/ww.php?ver=3&touid=hqse&siteid=cntaobao&status=1&charset=utf-8"><img border="0" src="http://amos.alicdn.com/online.aw?v=2&uid=hqse&site=cntaobao&s=1&charset=utf-8" alt="æ·˜å®æ—ºæ—º" /></a></td></tr>
+<tr><td align=right>è…¾è®¯ Q Q</td><td><a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=87859979&site=qq&menu=yes"><img border="0" src="http://wpa.qq.com/pa?p=2:87859979:41" alt="è…¾è®¯ Q Q"></a></td></tr>
+<tr><td align=right>ç”µå­é‚®ç®±</td><td>hqse@qq.com</td></tr>
+<tr><td align=right>å¾®ä¿¡äºŒç»´ç </td><td>&nbsp;&nbsp;</td></tr>
 </table>
 <br>
 <table cellspacing=0 cellpadding=10 width=100% align=center>
@@ -53,13 +53,7 @@ a:hover,a:active{color:blue;text-decoration:none}
 
 <table cellspacing=0 cellpadding=0 width=760 border=0 align=center>
 <tr><td bgcolor=#ff3400 align=center><font color=yellow>www.todaygarden.net</font></td></tr>
-<tr><td align=center style="font-size:12px;color:#0053A6"><br>°æÈ¨ËùÓĞ 2010-2020 ½ñÈÕ»¨Ô°<br>¶õICP±¸13001523ºÅ 
-<script type="text/javascript">
-var rr=document.referrer;
-rr=rr.replace(/=/g,"xxxxxx1");
-rr=rr.replace(/&/g,"xxxxxx2");
-document.write("<img src='admin/counter.asp?ref="+rr+"&ref2="+screen.width+"X"+screen.height+"' width='0' height='0'>")
-</script>
+<tr><td align=center style="font-size:12px;color:#0053A6"><br>ç‰ˆæƒæ‰€æœ‰ 2010-2020 ä»Šæ—¥èŠ±å›­<br>
 <br><br></td></tr>
 </table>
 </body></html>
