--- a/our.html
+++ b/our.html
@@ -53,7 +53,6 @@ a:hover,a:active{color:blue;text-decoration:none}
 
 <table cellspacing=0 cellpadding=0 width=760 border=0 align=center>
 <tr><td bgcolor=#ff3400 align=center><font color=yellow>www.todaygarden.net</font></td></tr>
-<tr><td align=center style="font-size:12px;color:#0053A6"><br>版权所有 2010-2020 今日花园<br>
-<br><br></td></tr>
+<tr><td align=center style="font-size:12px;color:#0053A6"><br>版权所有 2010-2020 今日花园<br><br><br></td></tr>
 </table>
 </body></html>
