--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ a:hover,a:active{color:blue;text-decoration:none}
 <table cellspacing=0 cellpadding=0 width=760 border=0 align=center><tr><td>
 <br><p align=center><font size=5>一、GeoTIFF格式卫星影像</font></p><br>
 GeoTIFF格式卫星影像是带有坐标信息的图像文件，谷歌卫星地图和天地图卫星地图都是Web Mercator坐标系统，国际标准代码是EPSG:3857，一些新版本的地理信息系统(GIS)软件已经支持该坐标系统。<br><br>
-本站提供一个GeoTIFF格式的北京18层谷歌卫星地图给大家测试使用，下载地址： <a href=http://pan.baidu.com/s/1jGJYxca target=_blank>测试北京18层</a><br><br>
+本站提供一个GeoTIFF格式的北京18层谷歌卫星地图给大家测试使用，下载地址： <a href=https://pan.baidu.com/s/1gfiaXl5 target=_blank>测试北京18层</a><br><br>
 本站可以下载谷歌卫星地图并制作成GeoTIFF格式图像文件，地图数据从谷歌国外服务器上获取，没有坐标偏移。<br><br>
 更多详情请见本站<a href=down.html>GeoTIFF</a>栏目。<br><br>
 <br><p align=center><font size=5>二、MBTiles格式离线卫星地图</font></p><br>
