--- a/down.html
+++ b/down.html
@@ -25,7 +25,7 @@ a:hover,a:active{color:blue;text-decoration:none}
 
 <table cellspacing=0 cellpadding=0 width=760 border=0 align=center><tr><td>
 GeoTIFF格式卫星影像是带有坐标信息的图像文件，谷歌卫星地图（或天地图卫星地图）都是Web Mercator坐标系统，国际标准代码是EPSG:3857，一些新版本的地理信息系统(GIS)软件已经支持该坐标系统。 <br><br>
-本站提供一个GeoTIFF格式的北京18层谷歌卫星地图给大家测试使用，下载地址： <a href=http://pan.baidu.com/s/1jGJYxca target=_blank>测试北京18层</a><br><br>
+本站提供一个GeoTIFF格式的北京18层谷歌卫星地图给大家测试使用，下载地址： <a href=https://pan.baidu.com/s/1gfiaXl5 target=_blank>测试北京18层</a><br><br>
 本站可下载谷歌卫星地图并制作成<font color='#0080C0'>GeoTIFF格式</font>的影像图片，地图数据从谷歌国外服务器上获取，没有坐标偏移。<br><br>
 在下载制作卫星地图时，需提供以下二项参数，以便于地图的制作：<br>
 <font color='#0080C0'>1)</font> 地图的范围。 <br>
