--- a/mbtiles.html
+++ b/mbtiles.html
@@ -1,5 +1,5 @@
 <HTML><HEAD><TITLE>今日花园 - 今日花园Maps:苹果IOS系统下的导航软件</TITLE>
-<META http-equiv=Content-Type content="text/html; charset=gb2312">
+<META http-equiv=Content-Type content="text/html; charset=UTF-8">
 <META name=Author content="贺庆生" />
 <META name=KeyWords content="卫星地图,卫星影像,GPS导航仪,今日花园,Maps,MBTiles,OZI,OziExplorer,OruxMaps,OruxWin,WINCE,Android,TIF,GeoTIFF,离线地图,数据包,地图制作教程" />
 <META name=Description content="今日花园Maps苹果IOS系统MBTiles格式离线卫星地图、OruxMaps离线卫星地图、OziExplorer谷歌卫星地图，提供GeoTIFF带坐标信息的卫星地图影像下载、能在Windows系统下运行的OruxMaps软件OruxWin。" />
@@ -24,7 +24,7 @@ a:hover,a:active{color:blue;text-decoration:none}
 
 <table cellspacing=0 cellpadding=0 width=760 border=0 align=center><tr><td>
 <font color='#0080C0'> 今日花园 Maps </font>是一款在苹果手机或者平板(IOS 8.0以上版本)上使用的GPS地图软件，与安卓系统上使用的OruxMaps软件类似，软件有GPS定位和轨迹追踪记录功能，能导入KMZ、KML或者GPX格式的航线、航点、路径文件，有地图纠偏功能，对于国内有偏移的地图也能正常使用。软件可使用在线地图(包括百度、高德、谷歌地图)和离线地图，其中离线地图使用的是MBTiles格式。<br><br>
-有关<font color='#0080C0'> 今日花园 Maps </font>软件的详细信息，请看：<a href=http://www.todaygarden.net/maps/ target=_blank>今日花园 Maps 在线帮助</a><br><br>
+有关<font color='#0080C0'> 今日花园 Maps </font>软件的详细信息，请看：<a href=maps/index.html target=_blank>今日花园 Maps 在线帮助</a><br><br>
 软件截图如下所示：（图中使用的是18层分辨率的地图）<br><br>
 </td></tr></table>
 <p align=center><img src="images/1.jpg" alt="今日花园 Maps运行1"></p><br><br>
@@ -32,20 +32,20 @@ a:hover,a:active{color:blue;text-decoration:none}
 <p align=center><img src="images/track1.jpg" alt="今日花园 Maps运行3"></p><br><br>
 <table cellspacing=0 cellpadding=0 width=760 border=0 align=center><tr><td>
 下面主要介绍软件的安装和MBTiles格式地图添加到苹果手机或者平板电脑上的步骤：<br><br>
-<font color=red>1)</font> 在苹果<font color=red> App Store </font>中搜索 <font color=green>今日花园 Maps</font> 这款应用程序，这是一款价格6元人民币的收费软件，购买并安装这款软件。<br><br>
+<font color=red>1)</font> 在苹果 App Store 中搜索 <font color=green>今日花园 Maps</font> 这款应用程序，这是一款价格6元人民币的收费软件，购买并安装这款软件。<br><br>
 <font color=red>2)</font> 软件自带有世界3-9层离线平面地图，在软件的在线帮助中，还有许多免费地图资源供大家下载使用。<br><br>
-<font color=red>3)</font> 在电脑上安装苹果的<font color=red> iTunes </font>软件（微软的WINDOWS电脑或者苹果的MAC电脑都有相应版本的<font color=red> iTunes </font>程序）。<br><br>
-<font color=red>4)</font> 在电脑上打开<font color=red> iTunes </font>程序，然后用USB数据线把苹果手机或者平板与电脑相连。如下图所示：<br><br>
+<font color=red>3)</font> 在电脑上安装苹果的 iTunes 软件（微软的WINDOWS电脑或者苹果的MAC电脑都有相应版本的 iTunes 程序）。<br><br>
+<font color=red>4)</font> 在电脑上打开 iTunes 程序，然后用USB数据线把苹果手机或者平板与电脑相连。如下图所示：<br><br>
 </td></tr></table>
 <p align=center><img src="images/itunes1.jpg" alt="与电脑相连1"></p><br><br>
 <table cellspacing=0 cellpadding=0 width=760 border=0 align=center><tr><td>
-<font color=red>5)</font> 在<font color=red> iTunes </font>程序中，依次找到“设备”---->“应用程序”---->“文件共享”，在文件共享的“应用程序”列表中找到“今日花园 Maps”，然后把地图文件添加到右边的“文稿”列表中。如下图所示：<br><br>
+<font color=red>5)</font> 在 iTunes 程序中，依次找到“设备”---->“应用程序”---->“文件共享”，在文件共享的“应用程序”列表中找到“今日花园 Maps”，然后把地图文件添加到右边的“文稿”列表中。如下图所示：<br><br>
 </td></tr></table>
 <p align=center><img src="images/itunes2.jpg" alt="与电脑相连2"></p><br><br>
 <table cellspacing=0 cellpadding=0 width=760 border=0 align=center><tr><td>
-MBTiles格式的卫星地图数据包也可以在WINDOWS系统的电脑上使用。请先在电脑上安装<font color=red>OruxWin</font>软件。<br><br>
+MBTiles格式的卫星地图数据包也可以在WINDOWS系统的电脑上使用。请先在电脑上安装 OruxWin 软件。<br><br>
  
-OruxWin软件的下载地址及使用说明请看：<a href=http://www.todaygarden.net/oruxwin/readme.html target=_blank>OruxWin在线帮助</a><br><br>
+OruxWin软件的下载地址及使用说明请看：<a href=oruxwin/index.html target=_blank>OruxWin在线帮助</a><br><br>
 需要制作MBTiles格式的卫星地图数据包的用户请到本站的<a href=http://todaygarden.taobao.com/ target=_blank>淘宝店</a>购买。<br><br>
 </td></tr></table>
 
