--- a/oruxmaps.html
+++ b/oruxmaps.html
@@ -1,5 +1,5 @@
 <HTML><HEAD><TITLE>今日花园 - OruxMaps:安卓系统下的GPS导航软件、OruxWin</TITLE>
-<META http-equiv=Content-Type content="text/html; charset=gb2312">
+<META http-equiv=Content-Type content="text/html; charset=UTF-8">
 <META name=Author content="贺庆生" />
 <META name=KeyWords content="卫星地图,卫星影像,GPS导航仪,今日花园,Maps,MBTiles,OZI,OziExplorer,OruxMaps,OruxWin,WINCE,Android,TIF,GeoTIFF,离线地图,数据包,地图制作教程" />
 <META name=Description content="今日花园Maps苹果IOS系统MBTiles格式离线卫星地图、OruxMaps离线卫星地图、OziExplorer谷歌卫星地图，提供GeoTIFF带坐标信息的卫星地图影像下载、能在Windows系统下运行的OruxMaps软件OruxWin。" />
@@ -40,26 +40,26 @@ a:hover,a:active{color:blue;text-decoration:none}
 <p align=center><img src="images/cccc3.jpg" alt="离线地图坐标检测3"></p><br><br>
 <table cellspacing=0 cellpadding=0 width=760 border=0 align=center><tr><td>
 卫星地图可以带地名。对于中国大陆地区，16层及以下只能带天地图的地名，17层及以上不带地名。对于中国大陆以外的地区，地名标注可以有以下三种类型：<br>
-<font color=red>1)</font> 本地文字，地图是哪个国家就用哪国的文字标注。例如：法国地名标注用法文、德国地名标注用德文。<br>
-<font color=red>2)</font> 中文，地名标注用中文(其中可能参杂有英文和本地文字)。<br>
-<font color=red>3)</font> 英文，地名标注用英文(其中可能参杂有本地文字)。<br><br>
+1) 本地文字，地图是哪个国家就用哪国的文字标注。例如：法国地名标注用法文、德国地名标注用德文。<br>
+2) 中文，地名标注用中文(其中可能参杂有英文和本地文字)。<br>
+3) 英文，地名标注用英文(其中可能参杂有本地文字)。<br><br>
 OruxMaps离线卫星地图的使用：<br><br>
-<font color='#0080C0'>1）</font> 安卓系统的手机、平板电脑安装<font color=red>OruxMaps</font>软件<br><br>
-<font color='#0080C0'>2）</font> Windows系统电脑安装<font color=red>OruxWin</font>软件<br><br>
+1）安卓系统的手机、平板电脑安装OruxMaps软件<br><br>
+2）Windows系统电脑安装OruxWin软件<br><br>
 安卓系统OruxMaps下载地址：<a href=http://www.todaygarden.net/program/com.orux.oruxmaps_6.5.9_60509.rar target=_blank>oruxmaps(6.5.9版本)压缩包</a><br><br>
 Oruxmaps 导航软件使用说明书：<a href=http://pan.baidu.com/s/1dDeRTYx target=_blank>Oruxmaps4.4版导航软件使用说明书.rar</a><br>
-<font color='#0080C0'>说明：</font>是V4.4版的使用说明书，现在软件更新后界面都有许多的变化，但基本功能都是相同的，此说明书仅供参考。<br><br>
+说明：是V4.4版的使用说明书，现在软件更新后界面都有许多的变化，但基本功能都是相同的，此说明书仅供参考。<br><br>
 OruxWin软件的最新信息请看：<a href=oruxwin/index.html target=_blank>OruxWin在线帮助</a>
 <br><br>
 本站免费提供OruxMaps世界4-8层和全国3-10层离线卫星地图给大家试用，下载地址：<br>
 <a href=http://pan.baidu.com/s/1kT4Ere3 target=_blank>世界4-8层卫星地图(450M)</a><br>
 <a href=http://pan.baidu.com/s/1xIV0B target=_blank>全国3-10层离线卫星地图(1.01G)</a><br><br>
-本站提供的OruxMaps离线卫星地图，是一个文件夹，将整个文件夹复制到OruxMaps程序目录下的mapfiles目录中。<font color=red>注意：</font>文件夹的名称不能改动，否则打不开地图。<br><br>
-<font color=red>注意：</font><br>
-<font color=red>1)</font> 一般的安卓手机只支持<font color='#0080C0'>FAT32</font>格式的TF卡，<font color='#0080C0'>FAT32</font>格式的TF卡单个文件的大小不能超过<font color=red>4G</font>。 <br>
-<font color=red>2)</font> 三星Galaxy S3、S4等安卓手机能支持<font color=Fuchsia>exFAT</font>格式的TF卡，<font color=Fuchsia>exFAT</font>格式的TF卡对文件大小没有限制。 <br>
-<font color=red>3)</font> 在WINDOWS操作系统的电脑中，Windows XP需要安装补丁才能支持<font color=Fuchsia>exFAT</font>格式，Vista SP1及以后版本都支持<font color=Fuchsia>exFAT</font>格式。<br>
-<font color=red>4)</font> 将TF卡放到读卡器中，把读卡器插入支持<font color=Fuchsia>exFAT</font>格式的电脑上，就可以对TF卡进行<font color=Fuchsia>exFAT</font>格式化。如下图所示，文件系统选择<font color=Fuchsia>exFAT</font>，其它默认值。<br><br>
+本站提供的OruxMaps离线卫星地图，是一个文件夹，将整个文件夹复制到OruxMaps程序目录下的mapfiles目录中。注意：文件夹的名称不能改动，否则打不开地图。<br><br>
+注意：<br>
+1) 一般的安卓手机只支持FAT32格式的TF卡，FAT32格式的TF卡单个文件的大小不能超过4G。 <br>
+2) 三星Galaxy S3、S4等安卓手机能支持exFAT格式的TF卡，exFAT格式的TF卡对文件大小没有限制。 <br>
+3) 在WINDOWS操作系统的电脑中，Windows XP需要安装补丁才能支持exFAT格式，Vista SP1及以后版本都支持exFAT格式。<br>
+4) 将TF卡放到读卡器中，把读卡器插入支持exFAT格式的电脑上，就可以对TF卡进行exFAT格式化。如下图所示，文件系统选择exFAT，其它默认值。<br><br>
 </td></tr></table>
 <p align=center><img src="images/exfat.jpg" alt="TF卡exFAT格式化"></p><br><br>
 <table cellspacing=0 cellpadding=0 width=760 border=0 align=center><tr><td>
