--- a/ozi.html
+++ b/ozi.html
@@ -1,5 +1,5 @@
 <HTML><HEAD><TITLE>今日花园 - OziExplorer:微软windows、wince系统下的GPS导航软件</TITLE>
-<META http-equiv=Content-Type content="text/html; charset=gb2312">
+<META http-equiv=Content-Type content="text/html; charset=UTF-8">
 <META name=Author content="贺庆生" />
 <META name=KeyWords content="卫星地图,卫星影像,GPS导航仪,今日花园,Maps,MBTiles,OZI,OziExplorer,OruxMaps,OruxWin,WINCE,Android,TIF,GeoTIFF,离线地图,数据包,地图制作教程" />
 <META name=Description content="今日花园Maps苹果IOS系统MBTiles格式离线卫星地图、OruxMaps离线卫星地图、OziExplorer谷歌卫星地图，提供GeoTIFF带坐标信息的卫星地图影像下载、能在Windows系统下运行的OruxMaps软件OruxWin。" />
@@ -49,9 +49,9 @@ a:hover,a:active{color:blue;text-decoration:none}
 
 OziExplorer导航软件可以添加多幅地图，并根据GPS坐标值自动调用地图。<br><br>
 OziExplorer卫星地图(离线)的使用：<br><br>
-<font color='#0080C0'>1）</font> Windows系统的PC电脑，安装<font color=red>OziExplorer</font>电脑版<br>
-<font color='#0080C0'>2）</font> WINCE系统的车载导航仪，安装<font color=red>OziExplorer</font>WINCE版<br>
-<font color='#0080C0'>3）</font> 安卓系统的手机、平板电脑，安装<font color=red>OziExplorer</font>安卓版<br><br>
+1）Windows系统的PC电脑，安装 OziExplorer 电脑版<br>
+2）WINCE系统的车载导航仪，安装 OziExplorer WINCE版<br>
+3）安卓系统的手机、平板电脑，安装 OziExplorer 安卓版<br><br>
 电脑版OziExplorer下载地址：<a href=http://pan.baidu.com/share/link?shareid=72486&uk=1258626243 target=_blank>ozi for pc 3.95.4m.rar</a><br><br>
 WINCE导航仪版oziExplorer下载地址：<a href=http://pan.baidu.com/share/link?shareid=73531&uk=1258626243 target=_blank>oziExplorerCE2.35B.rar</a><br><br>
 安卓版oziExplorer下载地址：<a href=http://pan.baidu.com/share/link?shareid=72506&uk=1258626243 target=_blank>Ozi_for_Android1.15.apk</a><br><br>
@@ -68,7 +68,7 @@ WINCE导航仪版oziExplorer下载地址：<a href=http://pan.baidu.com/share/li
 <p align=center><img src="images/android5.jpg" alt="安卓手机用OziExplorer卫星地图导航截屏图2"></p><br><br>
 <p align=center><img src="images/android6.jpg" alt="安卓手机用OziExplorer卫星地图导航截屏图3"></p><br><br>
 <table cellspacing=0 cellpadding=0 width=760 border=0 align=center><tr><td>
-需要制作的用户请到本站的<a href=http://todaygarden.taobao.com/ target=_blank>淘宝店</a>购买。<br><br>
+需要制作OZI地图的用户请到本站的<a href=http://todaygarden.taobao.com/ target=_blank>淘宝店</a>购买。<br><br>
 </td></tr></table>
 
 
