--- a/Resources.html
+++ b/Resources.html
@@ -1,5 +1,5 @@
 <HTML><HEAD><TITLE>今日花园 - 资源下载</TITLE>
-<META http-equiv=Content-Type content="text/html; charset=gb2312">
+<META http-equiv=Content-Type content="text/html; charset=UTF-8">
 <META name=Author content="贺庆生" />
 <META name=KeyWords content="卫星地图,卫星影像,GPS导航仪,今日花园,Maps,MBTiles,OZI,OziExplorer,OruxMaps,OruxWin,WINCE,Android,TIF,GeoTIFF,离线地图,数据包,地图制作教程" />
 <META name=Description content="今日花园Maps苹果IOS系统MBTiles格式离线卫星地图、OruxMaps离线卫星地图、OziExplorer谷歌卫星地图，提供GeoTIFF带坐标信息的卫星地图影像下载、能在Windows系统下运行的OruxMaps软件OruxWin。" />
@@ -43,7 +43,7 @@ ozi for pc 3.95.4m版(PC电脑版)：<a href=http://pan.baidu.com/share/link?sha
 OruxMaps 导航软件使用说明书：<a href=http://pan.baidu.com/s/1dDeRTYx target=_blank>Oruxmaps4.4版导航软件使用说明书.rar</a><br>
 <font color='#0080C0'>说明：</font>是V4.4版的使用说明书，现在软件更新后界面都有许多的变化，但基本功能都是相同的，此说明书仅供参考。<br><br>
 
-OruxWin导航软件：<a href=http://www.todaygarden.net/oruxwin/readme.html target=_blank>OruxWin在线帮助</a> <br><br>
+OruxWin导航软件：<a href=oruxwin/index.html target=_blank>OruxWin在线帮助</a> <br><br>
 
 OruxMaps世界4-8层卫星地图：<a href=http://pan.baidu.com/s/1kT4Ere3 target=_blank>世界4-8层卫星地图(450MB)</a><br><br> 
 
