--- a/our.html
+++ b/our.html
@@ -1,5 +1,5 @@
 <HTML><HEAD><TITLE>今日花园 - 联系我们</TITLE>
-<META http-equiv=Content-Type content="text/html; charset=gb2312">
+<META http-equiv=Content-Type content="text/html; charset=UTF-8">
 <META name=Author content="贺庆生" />
 <META name=KeyWords content="卫星地图,卫星影像,GPS导航仪,今日花园,Maps,MBTiles,OZI,OziExplorer,OruxMaps,OruxWin,WINCE,Android,TIF,GeoTIFF,离线地图,数据包,地图制作教程" />
 <META name=Description content="今日花园Maps苹果IOS系统MBTiles格式离线卫星地图、OruxMaps离线卫星地图、OziExplorer谷歌卫星地图，提供GeoTIFF带坐标信息的卫星地图影像下载、能在Windows系统下运行的OruxMaps软件OruxWin。" />
@@ -35,8 +35,8 @@ a:hover,a:active{color:blue;text-decoration:none}
 
 <br><br>
 <table cellspacing=0 cellpadding=10 width=340 align=center>
-<tr><td valign=top align=right>在线时间</td><td><font color=green>星期一至星期五</font> <font color=red>8:30-21:30<br>
-<font color=green>星期六、星期天</font> <font color=red>19:00-21:30</font></td></tr>
+<tr><td valign=top align=right>在线时间</td><td>星期一至星期五 8:30-21:30<br>
+星期六、星期天 19:00-21:30</td></tr>
 <tr><td align=right>淘宝网店</td><td><a href=http://todaygarden.taobao.com target=_blank />今日花园</a></td></tr>
 <tr><td align=right>淘宝旺旺</td><td><a target="_blank" href="http://www.taobao.com/webww/ww.php?ver=3&touid=hqse&siteid=cntaobao&status=1&charset=utf-8"><img border="0" src="http://amos.alicdn.com/online.aw?v=2&uid=hqse&site=cntaobao&s=1&charset=utf-8" alt="淘宝旺旺" /></a></td></tr>
 <tr><td align=right>腾讯 Q Q</td><td><a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=87859979&site=qq&menu=yes"><img border="0" src="http://wpa.qq.com/pa?p=2:87859979:41" alt="腾讯 Q Q"></a></td></tr>
