--- a/oruxmaps.html
+++ b/oruxmaps.html
@@ -46,7 +46,7 @@ a:hover,a:active{color:blue;text-decoration:none}
 OruxMaps离线卫星地图的使用：<br><br>
 1）安卓系统的手机、平板电脑安装OruxMaps软件<br><br>
 2）Windows系统电脑安装OruxWin软件<br><br>
-安卓系统OruxMaps下载地址：<a href=http://www.todaygarden.net/program/com.orux.oruxmaps_6.5.9_60509.rar target=_blank>oruxmaps(6.5.9版本)压缩包</a><br><br>
+安卓系统OruxMaps下载地址：<a href=https://pan.baidu.com/s/1UdirLu7G5PtAgfH1C6RVsw target=_blank>oruxmaps(6.5.9版本)</a><br><br>
 Oruxmaps 导航软件使用说明书：<a href=http://pan.baidu.com/s/1dDeRTYx target=_blank>Oruxmaps4.4版导航软件使用说明书.rar</a><br>
 说明：是V4.4版的使用说明书，现在软件更新后界面都有许多的变化，但基本功能都是相同的，此说明书仅供参考。<br><br>
 OruxWin软件的最新信息请看：<a href=oruxwin/index.html target=_blank>OruxWin在线帮助</a>
@@ -75,7 +75,7 @@ OruxMaps在使用离线卫星地图时，如果加载了高程数据，还能显
 <p align=center><img src="images/o3d4.jpg" alt="OruxMaps三维卫星地图"></p><br><br>
 <p align=center><img src="images/o3d9.jpg" alt="OruxMaps三维卫星地图"></p><br><br>
 <table cellspacing=0 cellpadding=0 width=760 border=0 align=center><tr><td>
-需要制作的用户请到本站的<a href=http://todaygarden.taobao.com/ target=_blank>淘宝店</a>购买。<br><br>
+需要制作ORUX离线地图的用户请到本站的<a href=http://todaygarden.taobao.com/ target=_blank>淘宝店</a>购买。<br><br>
 </td></tr></table>
 
 <table cellspacing=0 cellpadding=0 width=760 border=0 align=center>
