--- a/Resources.html
+++ b/Resources.html
@@ -38,7 +38,7 @@ ozi for pc 3.95.4m版(PC电脑版)：<a href=http://pan.baidu.com/share/link?sha
 全国9层清晰度谷歌卫星OZI地图：<a href=http://pan.baidu.com/share/link?shareid=72485&uk=1258626243 target=_blank>china9.rar</a><br>
 <font color='#0080C0'>说明：</font>解压后得到两个文件，一个是china9.ozf2，一个是china9.map。<br><br>
 
-开源免费的OruxMaps6.5.9版本：<a href=http://www.todaygarden.net/program/com.orux.oruxmaps_6.5.9_60509.rar target=_blank>oruxmaps(6.5.9版本)压缩包</a><br><br> 
+开源免费的OruxMaps6.5.9版本：<a href=https://pan.baidu.com/s/1UdirLu7G5PtAgfH1C6RVsw target=_blank>oruxmaps(6.5.9版本)</a><br><br> 
 
 OruxMaps 导航软件使用说明书：<a href=http://pan.baidu.com/s/1dDeRTYx target=_blank>Oruxmaps4.4版导航软件使用说明书.rar</a><br>
 <font color='#0080C0'>说明：</font>是V4.4版的使用说明书，现在软件更新后界面都有许多的变化，但基本功能都是相同的，此说明书仅供参考。<br><br>
