--- a/mbtiles.html
+++ b/mbtiles.html
@@ -43,6 +43,10 @@ a:hover,a:active{color:blue;text-decoration:none}
 </td></tr></table>
 <p align=center><img src="images/itunes2.jpg" alt="与电脑相连2"></p><br><br>
 <table cellspacing=0 cellpadding=0 width=760 border=0 align=center><tr><td>
+MBTiles是一种通用的离线地图数据包格式，许多地图软件都兼容这种格式。本站制作的MBTiles格式离线卫星地图，卫星图片取自谷歌地图国外服务器，图片没有坐标偏移，能实现准确定位。地图包含多个层级，可以在多个层级之间缩放。地名标注来源于天地图。 <br><br>
+下面提供一个MBTiles格式的中国4-10层卫星地图给大家免费测试使用，百度网盘地址：<br>
+<a href=https://pan.baidu.com/s/1mjZy6Xa target=_blank>中国4-10层卫星地图(G)(mbtiles).rar</a><br><br>
+ 
 MBTiles格式的卫星地图数据包也可以在WINDOWS系统的电脑上使用。请先在电脑上安装 OruxWin 软件。<br><br>
  
 OruxWin软件的下载地址及使用说明请看：<a href=oruxwin/index.html target=_blank>OruxWin在线帮助</a><br><br>
