--- a/maps/index.html
+++ b/maps/index.html
@@ -130,9 +130,9 @@ MBTiles格式离线地图可以使用<font color="red"> Mobile Atlas Creator </f
 <br><br><font color=red>十二、在线地图</font><a name="t12">&nbsp</a><br><br>
 在软件6.0版本以后，增加了在线地图功能（内购项目，价格6元），目前在线地图有：百度平面、高德平面、谷歌平面、谷歌卫星、谷歌地形。在线地图与离线地图数据包之间，除了数据来源不同外，其它所有功能都一样。如下图所示： <br><br> 
 </td></tr></table>
-<p align=center><img src="images/IMG1a.jpg" alt="在线地图购买1"></p><br><br>
-<p align=center><img src="images/IMG1b.jpg" alt="在线地图购买2"></p><br><br>
-<p align=center><img src="images/IMG3c.jpg" alt="在线地图购买3"></p><br><br>
+<p align=center><img src="images/img1a.jpg" alt="在线地图购买1"></p><br><br>
+<p align=center><img src="images/img1b.jpg" alt="在线地图购买2"></p><br><br>
+<p align=center><img src="images/img3c.jpg" alt="在线地图购买3"></p><br><br>
 
 <p align=center><img src="images/IMG1.png" alt="百度在线地图1"></p><br><br>
 <p align=center><img src="images/IMG2.png" alt="百度在线地图2"></p><br><br>
@@ -166,9 +166,9 @@ MBTiles格式离线地图可以使用<font color="red"> Mobile Atlas Creator </f
 <br><br><font color=red>十六、地图纠偏</font><a name="t16">&nbsp</a><br><br>
 软件具有地图纠偏功能（内购项目，价格6元），对于制作的有偏移的国内地图数据包，可以使用纠偏功能进行纠偏。其购买方法为：<br><br> 
 </td></tr></table>
-<p align=center><img src="images/IMG3a.jpg" alt="地图纠偏1"></p><br><br>
-<p align=center><img src="images/IMG3b.jpg" alt="地图纠偏2"></p><br><br>
-<p align=center><img src="images/IMG3c.jpg" alt="地图纠偏3"></p><br><br>
+<p align=center><img src="images/img3a.jpg" alt="地图纠偏1"></p><br><br>
+<p align=center><img src="images/img3b.jpg" alt="地图纠偏2"></p><br><br>
+<p align=center><img src="images/img3c.jpg" alt="地图纠偏3"></p><br><br>
 <table class=Tt align=center><tr><td>
  
 <br><br><font color=red>十七、离线地图资源</font><a name="t17">&nbsp</a><br><br>
