--- a/file/ozi-2.html
+++ b/file/ozi-2.html
@@ -1,8 +1,8 @@
-<HTML><HEAD><TITLE>½ñÈÕ»¨Ô° - ÔÚWINCEÏµÍ³µÄµ¼º½ÒÇÉÏ°²×°OziExplorerÈí¼þ</TITLE>
+<HTML><HEAD><TITLE>ä»Šæ—¥èŠ±å›­ - åœ¨WINCEç³»ç»Ÿçš„å¯¼èˆªä»ªä¸Šå®‰è£…OziExplorerè½¯ä»¶</TITLE>
 <META http-equiv=Content-Type content="text/html; charset=UTF-8">
-<META name=Author content="ºØÇìÉú" />
-<META name=KeyWords content="ÎÀÐÇµØÍ¼,ÎÀÐÇÓ°Ïñ,GPSµ¼º½ÒÇ,½ñÈÕ»¨Ô°,Maps,MBTiles,OZI,OziExplorer,OruxMaps,OruxWin,WINCE,Android,TIF,GeoTIFF,ÀëÏßµØÍ¼,Êý¾Ý°ü,µØÍ¼ÖÆ×÷½Ì³Ì" />
-<META name=Description content="½ñÈÕ»¨Ô°MapsÆ»¹ûIOSÏµÍ³MBTiles¸ñÊ½ÀëÏßÎÀÐÇµØÍ¼¡¢OruxMapsÀëÏßÎÀÐÇµØÍ¼¡¢OziExplorer¹È¸èÎÀÐÇµØÍ¼£¬Ìá¹©GeoTIFF´ø×ø±êÐÅÏ¢µÄÎÀÐÇµØÍ¼Ó°ÏñÏÂÔØ¡¢ÄÜÔÚWindowsÏµÍ³ÏÂÔËÐÐµÄOruxMapsÈí¼þOruxWin¡£" />
+<META name=Author content="è´ºåº†ç”Ÿ" />
+<META name=KeyWords content="å«æ˜Ÿåœ°å›¾,å«æ˜Ÿå½±åƒ,GPSå¯¼èˆªä»ª,ä»Šæ—¥èŠ±å›­,Maps,MBTiles,OZI,OziExplorer,OruxMaps,OruxWin,WINCE,Android,TIF,GeoTIFF,ç¦»çº¿åœ°å›¾,æ•°æ®åŒ…,åœ°å›¾åˆ¶ä½œæ•™ç¨‹" />
+<META name=Description content="ä»Šæ—¥èŠ±å›­Mapsè‹¹æžœIOSç³»ç»ŸMBTilesæ ¼å¼ç¦»çº¿å«æ˜Ÿåœ°å›¾ã€OruxMapsç¦»çº¿å«æ˜Ÿåœ°å›¾ã€OziExplorerè°·æ­Œå«æ˜Ÿåœ°å›¾ï¼Œæä¾›GeoTIFFå¸¦åæ ‡ä¿¡æ¯çš„å«æ˜Ÿåœ°å›¾å½±åƒä¸‹è½½ã€èƒ½åœ¨Windowsç³»ç»Ÿä¸‹è¿è¡Œçš„OruxMapsè½¯ä»¶OruxWinã€‚" />
 <style type="text/css">
 a:link,a:visited{color:red;text-decoration:none}
 a:hover,a:active{color:blue;text-decoration:none}
@@ -10,44 +10,43 @@ a:hover,a:active{color:blue;text-decoration:none}
 </HEAD><BODY>
 <table cellspacing=0 cellpadding=0 width=760 border=0 align=center><tr><td><img src=../images/bannera.jpg border=0></td></tr></table>
 <table cellspacing=0 cellpadding=0 width=760 border=0 align=center bgcolor=#80FFFF height=48><tr>
-<td width=100 align=center><a href=../index.html>Ê×Ò³</a></td>
+<td width=100 align=center><a href=../index.html>é¦–é¡µ</a></td>
 <td width=100 align=center><a href=../down.html>GeoTIFF</a></td>
-<td width=100 align=center><a href=../mbtiles.html>½ñÈÕ»¨Ô°Maps</a></td>
+<td width=100 align=center><a href=../mbtiles.html>ä»Šæ—¥èŠ±å›­Maps</a></td>
 <td width=100 align=center><a href=../oruxmaps.html>OruxMaps</a></td>
 <td width=100 align=center bgcolor=#ff3400><font color=yellow>OZI</font></td>
-<td width=100 align=center><a href=../Resources.html>×ÊÔ´</a></td>
-<td width=100 align=center><a href=../soft.html>Èí¼þ</a></td>
-<td width=100 align=center><a href=../our.html>ÁªÏµ</a></td>
+<td width=100 align=center><a href=../Resources.html>èµ„æº</a></td>
+<td width=100 align=center><a href=../soft.html>è½¯ä»¶</a></td>
+<td width=100 align=center><a href=../our.html>è”ç³»</a></td>
 </tr></table>
 <table cellspacing=0 cellpadding=0 width=760 border=0 align=center bgcolor=#ff3400 height=32>
-<tr><td>&nbsp;&nbsp;<font color=yellow>µ±Ç°Î»ÖÃ£º<a href=../ozi.html style="color:#0053A6">OZI</a> ---> ÔÚWINCEÏµÍ³µÄµ¼º½ÒÇÉÏ°²×°OziExplorerÈí¼þ</font></td></tr>
+<tr><td>&nbsp;&nbsp;<font color=yellow>å½“å‰ä½ç½®ï¼š<a href=../ozi.html style="color:#0053A6">OZI</a> ---> åœ¨WINCEç³»ç»Ÿçš„å¯¼èˆªä»ªä¸Šå®‰è£…OziExplorerè½¯ä»¶</font></td></tr>
 </table>
 
 <table cellspacing=0 cellpadding=0 width=760 border=0 align=center><tr><td>
 
-<h1 align=center>ÔÚWINCEÏµÍ³µÄµ¼º½ÒÇÉÏ°²×°OziExplorerÈí¼þ</h1>
+<h1 align=center>åœ¨WINCEç³»ç»Ÿçš„å¯¼èˆªä»ªä¸Šå®‰è£…OziExplorerè½¯ä»¶</h1>
 
-WINCEÏµÍ³µÄµ¼º½ÒÇ°²×°OziExplorerÈí¼þºÜ¼òµ¥£¬Ö»ÐèÒª°ÑOziExplorer³ÌÐòÎÄ¼þ¼ÐÈ«²¿¸´ÖÆµ½GPSµ¼º½ÒÇµÄSD¿¨ÉÏ¾ÍÐÐÁË¡£<br>
-ÔÚOziExplorer³ÌÐòÎÄ¼þ¼ÐÏÂÓÐÒ»¸öÃûÎª¡°Maps¡±µÄÎÄ¼þ¼Ð£¬ÕâÀïÊÇ×¨ÃÅ·ÅÖÃµØÍ¼ÎÄ¼þµÄµØ·½£¬½«ÖÆ×÷ºÃµÄozf2¸ñÊ½µØÍ¼ºÍmap¸ñÊ½µÄÎÄ¼þ¶¼¸´ÖÆµ½ÕâÀï¡£<br>
-OZIµØÍ¼¿ÉÒÔÓÐ¶à¸ö£¬Ã¿Ò»¸öozf2¸ñÊ½µØÍ¼¶¼±ØÐëÓÐÓëÆä¶ÔÓ¦µÄmap¸ñÊ½µÄÎÄ¼þ£¬OZIÔÚµ¼º½Ê±»á¸ù¾Ý¾­Î³¶È×ø±ê×Ô¶¯Ñ¡ÔñÏÔÊ¾ÄÄ·ùµØÍ¼¡£<br>
-Èç¹ûÄ³¸öµØµãÔÚÁ½·ùÒÔÉÏµÄµØÍ¼ÖÐ¶¼ÄÜÕÒµ½£¬OziExplorer»áÓÅÏÈÑ¡ÓÃ´ó±ÈÀý(·Ö±æÂÊ¸ß)µÄµØÍ¼¡£Èç¹ûÄ³¸öµØµãÔÚËùÓÐµÄµ¼º½µØÍ¼ÖÐ¶¼ÕÒ²»µ½£¬Ôò»áµ÷ÓÃ×Ô´øµÄÄ¬ÈÏÈ«ÇòµØÍ¼¡£<br>
-OZI³ÌÐòÎÄ¼þ¼ÐÖÐµÄ¡°OziExplorerCE.exe¡±¾ÍÊÇOziExplorerµ¼º½Èí¼þµÄÖ÷³ÌÐò¡£<br>
-¿ÉÒÔÔÚGPSµ¼º½ÒÇÖÐÉèÖÃµ¼º½Èí¼þµÄÂ·¾¶£¬ÒÔ±ãÓÚÎÒÃÇ¿ìËÙÆô¶¯OziExplorerµ¼º½Èí¼þ¡£ÏÂÃæÒÔEÂ·º½LH2009Õâ¿îGPSµ¼º½ÒÇÎªÀý£¬½éÉÜÒ»ÏÂÈçºÎÉèÖÃµ¼º½Èí¼þµÄÂ·¾¶¡£<br>
-ÉèÖÃµ¼º½Èí¼þÂ·¾¶£º¿ª»ú-->ÉèÖÃ-->µ¼º½Â·¾¶-->Ñ¡ÔñOziExplorer³ÌÐò-->´æÅÌÍË³ö(µã»÷ÈíÅÌÍ¼±ê)£¬ÈçÏÂÍ¼ËùÊ¾£º<br>
+WINCEç³»ç»Ÿçš„å¯¼èˆªä»ªå®‰è£…OziExplorerè½¯ä»¶å¾ˆç®€å•ï¼Œåªéœ€è¦æŠŠOziExplorerç¨‹åºæ–‡ä»¶å¤¹å…¨éƒ¨å¤åˆ¶åˆ°GPSå¯¼èˆªä»ªçš„SDå¡ä¸Šå°±è¡Œäº†ã€‚<br>
+åœ¨OziExplorerç¨‹åºæ–‡ä»¶å¤¹ä¸‹æœ‰ä¸€ä¸ªåä¸ºâ€œMapsâ€çš„æ–‡ä»¶å¤¹ï¼Œè¿™é‡Œæ˜¯ä¸“é—¨æ”¾ç½®åœ°å›¾æ–‡ä»¶çš„åœ°æ–¹ï¼Œå°†åˆ¶ä½œå¥½çš„ozf2æ ¼å¼åœ°å›¾å’Œmapæ ¼å¼çš„æ–‡ä»¶éƒ½å¤åˆ¶åˆ°è¿™é‡Œã€‚<br>
+OZIåœ°å›¾å¯ä»¥æœ‰å¤šä¸ªï¼Œæ¯ä¸€ä¸ªozf2æ ¼å¼åœ°å›¾éƒ½å¿…é¡»æœ‰ä¸Žå…¶å¯¹åº”çš„mapæ ¼å¼çš„æ–‡ä»¶ï¼ŒOZIåœ¨å¯¼èˆªæ—¶ä¼šæ ¹æ®ç»çº¬åº¦åæ ‡è‡ªåŠ¨é€‰æ‹©æ˜¾ç¤ºå“ªå¹…åœ°å›¾ã€‚<br>
+å¦‚æžœæŸä¸ªåœ°ç‚¹åœ¨ä¸¤å¹…ä»¥ä¸Šçš„åœ°å›¾ä¸­éƒ½èƒ½æ‰¾åˆ°ï¼ŒOziExplorerä¼šä¼˜å…ˆé€‰ç”¨å¤§æ¯”ä¾‹(åˆ†è¾¨çŽ‡é«˜)çš„åœ°å›¾ã€‚å¦‚æžœæŸä¸ªåœ°ç‚¹åœ¨æ‰€æœ‰çš„å¯¼èˆªåœ°å›¾ä¸­éƒ½æ‰¾ä¸åˆ°ï¼Œåˆ™ä¼šè°ƒç”¨è‡ªå¸¦çš„é»˜è®¤å…¨çƒåœ°å›¾ã€‚<br>
+OZIç¨‹åºæ–‡ä»¶å¤¹ä¸­çš„â€œOziExplorerCE.exeâ€å°±æ˜¯OziExplorerå¯¼èˆªè½¯ä»¶çš„ä¸»ç¨‹åºã€‚<br>
+å¯ä»¥åœ¨GPSå¯¼èˆªä»ªä¸­è®¾ç½®å¯¼èˆªè½¯ä»¶çš„è·¯å¾„ï¼Œä»¥ä¾¿äºŽæˆ‘ä»¬å¿«é€Ÿå¯åŠ¨OziExplorerå¯¼èˆªè½¯ä»¶ã€‚ä¸‹é¢ä»¥Eè·¯èˆªLH2009è¿™æ¬¾GPSå¯¼èˆªä»ªä¸ºä¾‹ï¼Œä»‹ç»ä¸€ä¸‹å¦‚ä½•è®¾ç½®å¯¼èˆªè½¯ä»¶çš„è·¯å¾„ã€‚<br>
+è®¾ç½®å¯¼èˆªè½¯ä»¶è·¯å¾„ï¼šå¼€æœº-->è®¾ç½®-->å¯¼èˆªè·¯å¾„-->é€‰æ‹©OziExplorerç¨‹åº-->å­˜ç›˜é€€å‡º(ç‚¹å‡»è½¯ç›˜å›¾æ ‡)ï¼Œå¦‚ä¸‹å›¾æ‰€ç¤ºï¼š<br>
 </td></tr></table>
-<p align=center><img src="../images/e-gps7.jpg" alt="EÂ·º½LH2009µ¼º½ÒÇ²ÎÊýÉèÖÃ1"></p><br><br>
-<p align=center><img src="../images/e-gps5.jpg" alt="EÂ·º½LH2009µ¼º½ÒÇ²ÎÊýÉèÖÃ2"></p><br><br>
-<p align=center><img src="../images/e-gps6.jpg" alt="EÂ·º½LH2009µ¼º½ÒÇ²ÎÊýÉèÖÃ3"></p><br><br>
+<p align=center><img src="../images/e-gps7.jpg" alt="Eè·¯èˆªLH2009å¯¼èˆªä»ªå‚æ•°è®¾ç½®1"></p><br><br>
+<p align=center><img src="../images/e-gps5.jpg" alt="Eè·¯èˆªLH2009å¯¼èˆªä»ªå‚æ•°è®¾ç½®2"></p><br><br>
+<p align=center><img src="../images/e-gps6.jpg" alt="Eè·¯èˆªLH2009å¯¼èˆªä»ªå‚æ•°è®¾ç½®3"></p><br><br>
 <table cellspacing=0 cellpadding=0 width=760 border=0 align=center><tr><td>
-ÉèÖÃºÃµ¼º½Èí¼þµÄÂ·¾¶ºó£¬µã»÷¡°µ¼º½¡±°´Å¥£¬OziExplorerµ¼º½Èí¼þ¾ÍÆô¶¯ÔËÐÐÁË¡£ÈçÏÂÍ¼ËùÊ¾£º<br>
+è®¾ç½®å¥½å¯¼èˆªè½¯ä»¶çš„è·¯å¾„åŽï¼Œç‚¹å‡»â€œå¯¼èˆªâ€æŒ‰é’®ï¼ŒOziExplorerå¯¼èˆªè½¯ä»¶å°±å¯åŠ¨è¿è¡Œäº†ã€‚å¦‚ä¸‹å›¾æ‰€ç¤ºï¼š<br>
 </td></tr></table>
-<p align=center><img src="../images/e-gps2.jpg" alt="EÂ·º½LH2009µ¼º½ÒÇÔËÐÐOZIÈí¼þ1"></p><br><br>
-<p align=center><img src="../images/e-gps8.jpg" alt="EÂ·º½LH2009µ¼º½ÒÇÔËÐÐOZIÈí¼þ2"></p><br><br>
+<p align=center><img src="../images/e-gps2.jpg" alt="Eè·¯èˆªLH2009å¯¼èˆªä»ªè¿è¡ŒOZIè½¯ä»¶1"></p><br><br>
+<p align=center><img src="../images/e-gps8.jpg" alt="Eè·¯èˆªLH2009å¯¼èˆªä»ªè¿è¡ŒOZIè½¯ä»¶2"></p><br><br>
 
 
 <table cellspacing=0 cellpadding=0 width=760 border=0 align=center>
 <tr><td bgcolor=#ff3400 align=center><font color=yellow>www.todaygarden.net</font></td></tr>
-<tr><td align=center style="font-size:12px;color:#0053A6"><br>°æÈ¨ËùÓÐ 2010-2020 ½ñÈÕ»¨Ô°<br>
-<br><br></td></tr>
+<tr><td align=center style="font-size:12px;color:#0053A6"><br>ç‰ˆæƒæ‰€æœ‰ 2010-2020 ä»Šæ—¥èŠ±å›­<br><br><br></td></tr>
 </table>
 </body></html>
