--- a/baidu/index.html
+++ b/baidu/index.html
@@ -38,7 +38,8 @@ map.addEventListener("maptypechange", function(){if(map.getMapType()==BMAP_NORMA
 map.centerAndZoom(point,9);
 map.enableScrollWheelZoom();
 
-function mup(){map.zoomIn();}
+function mup(){
+map.zoomIn();}
 function mdown(){map.zoomOut();}
 
 
